# python-cdk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  cdk-execution-role.yaml  cdk.json  generate_openapi.py  pyproject.toml  requirements.txt  template.yaml
.github/actions/setup-env/: action.yml
.github/workflows/: cdk-on-main.yml
.github/workflows/actions/: setup-env.yml
api/: Dockerfile  handler.py  partition_generators.py  post_routes.py  pyproject.toml  routes.py  schemas.py  shared.py  thing_routes.py
api/models/: model.py
api/tests/: test_handler.py  test_partition_generators.py  test_thing_routes.py
cdk/: api_stack.py  app.py  cdk.json  config.py  ecr_stack.py  uv_python_lambda_layer.py
cdk/resources/: Dockerfile
layer/: pyproject.toml
python_cdk_sam/: python_cdk_sam_stack.py
tests/unit/: test_python_cdk_sam_stack.py
