[project]
name = "layer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[parser]>=3.11.0",
    "aws-xray-sdk>=2.14.0",
    "boto3>=1.38.2",
    "pydantic>=2.11.4",
    "pydantic-core>=2.33.2",
    "types-boto3>=1.38.22",
]
